example/ingress/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-nginx-deploymnet
  labels:
    app: app3-nginx 
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: app3-nginx
  template:
    metadata:
      labels:
        app: app3-nginx
    spec:
      containers:
        - name: app3-nginx
          image: nginx 
          ports:
            - containerPort: 80
