example/ingress/Deployment-dervice.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: app3-nginx-service
  labels: 
    app: app3-nginx
spec: 
  type: NodePort
  selector:
    app: app3-nginx
  ports:
    - port: 80
      targetPort: 80
